// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Templates/Object Template Duplicate Fields 1`] = `
<dl
  className="description-list"
>
  <dt
    className="description-list__term description-list__term--single"
  >
    First Name
  </dt>
  <dd
    className="description-list__description description-list__description--single"
  >
    Grover
  </dd>
  <dt
    className="description-list__term description-list__term--single"
  >
    Last Name
  </dt>
  <dd
    className="description-list__description description-list__description--single"
  >
    Dibbert
  </dd>
  <dt
    className="description-list__term description-list__term--single"
  >
    Age
  </dt>
  <dd
    className="description-list__description description-list__description--single"
  >
    1
  </dd>
  <dt
    className="description-list__term description-list__term--single"
  >
    Sign Up Date
  </dt>
  <dd
    className="description-list__description description-list__description--single"
  >
    <time
      dateTime={"2020-09-03T17:32:19.298Z"}
      title="2020-09-03T17:32:19+00:00"
    >
      September 3, 2020
    </time>
  </dd>
  <dt
    className="description-list__term description-list__term--single"
  >
    Seconds since signup
  </dt>
  <dd
    className="description-list__description description-list__description--single"
  >
    10304860702
  </dd>
</dl>
`;

exports[`Storyshots Templates/Object Template Nested Data 1`] = `
<dl
  className="description-list"
>
  <dt
    className="description-list__term description-list__term--single"
  >
    Name First
  </dt>
  <dd
    className="description-list__description description-list__description--single"
  >
    Nadia
  </dd>
  <dt
    className="description-list__term description-list__term--single"
  >
    Name Last
  </dt>
  <dd
    className="description-list__description description-list__description--single"
  >
    O'Hara
  </dd>
  <dt
    className="description-list__term description-list__term--single"
  >
    Sign Up Date
  </dt>
  <dd
    className="description-list__description description-list__description--single"
  >
    <time
      dateTime={"2021-01-06T07:31:43.083Z"}
      title="2021-01-06T07:31:43+00:00"
    >
      January 6, 2021
    </time>
  </dd>
  <dt
    className="description-list__term description-list__term--single"
  >
    Age
  </dt>
  <dd
    className="description-list__description description-list__description--single"
  >
    26
  </dd>
</dl>
`;

exports[`Storyshots Templates/Object Template Object Template 1`] = `
<dl
  className="description-list"
>
  <dt
    className="description-list__term description-list__term--single"
  >
    First Name
  </dt>
  <dd
    className="description-list__description description-list__description--single"
  >
    Madie
  </dd>
  <dt
    className="description-list__term description-list__term--single"
  >
    Last Name
  </dt>
  <dd
    className="description-list__description description-list__description--single"
  >
    Keeling
  </dd>
  <dt
    className="description-list__term description-list__term--single"
  >
    Age
  </dt>
  <dd
    className="description-list__description description-list__description--single"
  >
    52
  </dd>
  <dt
    className="description-list__term description-list__term--single"
  >
    Sign Up Date
  </dt>
  <dd
    className="description-list__description description-list__description--single"
  >
    <time
      dateTime={"2020-10-24T00:56:55.835Z"}
      title="2020-10-24T00:56:55+00:00"
    >
      October 24, 2020
    </time>
  </dd>
</dl>
`;

exports[`Storyshots Templates/Object Template Out Of Order 1`] = `
<dl
  className="description-list"
>
  <dt
    className="description-list__term description-list__term--single"
  >
    Last Name
  </dt>
  <dd
    className="description-list__description description-list__description--single"
  >
    Leffler
  </dd>
  <dt
    className="description-list__term description-list__term--single"
  >
    First Name
  </dt>
  <dd
    className="description-list__description description-list__description--single"
  >
    Susan
  </dd>
  <dt
    className="description-list__term description-list__term--single"
  >
    Sign Up Date
  </dt>
  <dd
    className="description-list__description description-list__description--single"
  >
    <time
      dateTime={"2020-03-10T04:51:34.948Z"}
      title="2020-03-10T04:51:34+00:00"
    >
      March 10, 2020
    </time>
  </dd>
  <dt
    className="description-list__term description-list__term--single"
  >
    Age
  </dt>
  <dd
    className="description-list__description description-list__description--single"
  >
    74
  </dd>
</dl>
`;
